testdata/baselines/reference/submodule/compiler/pathMappingBasedModuleResolution_withExtension.errors.txt
/tsconfig.json(3,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.
/tsconfig.json(5,21): error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
/tsconfig.json(6,21): error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?


==== /tsconfig.json (3 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
            "paths": {
                "foo": ["foo/foo.ts"],
                        ~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
                "bar": ["bar/bar.js"]
                        ~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
            },
            "allowJs": true,
            "outDir": "bin"
        }
    }
    
==== /foo/foo.ts (0 errors) ====
    export function foo() {}
    
==== /bar/bar.js (0 errors) ====
    export function bar() {}
    
==== /a.ts (0 errors) ====
    import { foo } from "foo";
    import { bar } from "bar";
    